Fixing: work experience section on mobile view

--- a/style.css
+++ b/style.css
@@ -575,11 +575,11 @@ span {
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  margin: 1.5rem;
+  /* margin: 1.5rem; */
 }
 .work-experience .work-experience-item {
   /* border: 1px solid rgb(42, 190, 42); */
-  margin: 2rem;
+  /* margin: 2rem; */
   height: auto;
   width: 40rem;
   padding: 15px;
